--- a/css/less.css
+++ b/css/less.css
@@ -3,7 +3,7 @@
 }
 /*小屏的时候*/
 .container {
-  width: 100%;
+  width: 600px;
   margin: auto;
 }
 .container > .row {
@@ -132,31 +132,10 @@
 .col-s-hide {
   display: none;
 }
-.col-s-ban > a:nth-of-type(1) {
-  background-image: url("../img/event_small.jpg");
-}
-.col-s-ban > a:nth-of-type(2) {
-  background-image: url("../img/iphone_large.jpg");
-}
-.col-s-ban > a:nth-of-type(3) {
-  background-image: url("../img/macbookpro_small.jpg");
-}
-.col-s-goods1 > a {
-  background-image: url("../img/apple_tv_small.jpg");
-}
-.col-s-goods2 > a {
-  background-image: url("../img/nike_watch_small.jpg");
-}
-.col-s-goods3 > a {
-  background-image: url("../img/airpods_small.jpg");
-}
-.col-s-goods4 > a {
-  background-image: url("../img/accessibility_small.jpg");
-}
 /*中屏*/
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 800px) {
   .container {
-    width: 100%;
+    width: 800px;
     margin: auto;
   }
   .container > .row > .col-m-1 {
@@ -255,27 +234,6 @@
     float: left;
     width: 100%;
   }
-  .col-m-ban > a:nth-of-type(1) {
-    background-image: url("../img/event_medium.jpg");
-  }
-  .col-m-ban > a:nth-of-type(2) {
-    background-image: url("../img/iphone_large.jpg");
-  }
-  .col-m-ban > a:nth-of-type(3) {
-    background-image: url("../img/macbookpro_medium.jpg");
-  }
-  .col-m-goods1 > a {
-    background-image: url("../img/apple_tv_medium.jpg");
-  }
-  .col-m-goods2 > a {
-    background-image: url("../img/nike_watch_medium.jpg");
-  }
-  .col-m-goods3 > a {
-    background-image: url("../img/airpods_medium.jpg");
-  }
-  .col-m-goods4 > a {
-    background-image: url("../img/accessibility_medium.jpg");
-  }
   .col-s-hide {
     display: block;
   }
@@ -287,9 +245,9 @@
   }
 }
 /*大屏*/
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1200px) {
   .container {
-    width: 100%;
+    width: 1200px;
     margin: auto;
   }
   .container > .row > .col-l-1 {
@@ -396,36 +354,6 @@
   }
   .col-l-hide {
     display: none;
-  }
-  .col-l-ban > a:nth-of-type(1) > p {
-    background-image: url("../img/logo_event_large.png");
-  }
-  .col-l-ban > a:nth-of-type(1) {
-    background-image: url("../img/event_large.jpg");
-  }
-  .col-l-ban > a:nth-of-type(2) > p {
-    background-image: url("../img/logo_iphone_large.png");
-  }
-  .col-l-ban > a:nth-of-type(2) {
-    background-image: url("../img/iphone_large.jpg");
-  }
-  .col-l-ban > a:nth-of-type(3) > p {
-    background-image: url("../img/logo_macbookpro_large.png");
-  }
-  .col-l-ban > a:nth-of-type(3) {
-    background-image: url("../img/macbookpro_large.jpg");
-  }
-  .col-l-goods1 > a {
-    background-image: url("../img/apple_tv_large.jpg");
-  }
-  .col-l-goods2 > a {
-    background-image: url("../img/nike_watch_large.jpg");
-  }
-  .col-l-goods3 > a {
-    background-image: url("../img/airpods_large.jpg");
-  }
-  .col-l-goods4 > a {
-    background-image: url("../img/accessibility_large.jpg");
   }
 }
 /*清除浮动*/
